# miggo-mcp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  manifest.json  pyproject.toml  release-please-config.json  run.py
.github/workflows/: ci.yaml  release.yaml
scripts/: build.py  run_public_mcp.py  smoke_test.py
specs/: plan.md  prod_readiness_plan.md
src/miggo_mcp/: __init__.py  main.py
src/miggo_public_mcp/: __init__.py  client.py  config.py  constants.py  main.py  query.py
src/miggo_public_mcp/tools/: __init__.py
src/miggo_public_server/: __init__.py  client.py  config.py  constants.py  main.py  query.py  response.py
src/miggo_public_server/tools/: __init__.py
tests/: __init__.py  test_client.py  test_config.py  test_query.py  test_smoke.py  test_tools.py
