[project]
name = "miggo-public-mcp"
version = "0.1.0"
description = "MCP server for Miggo's public API"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=0.1.0",
    "httpx>=0.25.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "pytest-httpx>=0.23.0",
    "respx>=0.21.1",
    "pre-commit>=3.6,<4.0",
    "ruff>=0.6.0,<0.12",
    "click>=8.1.0",
    "pyfuze==2.7.2",
]

[tool.ruff.lint]
select = [
    "A",   # builtins shadowing
    "ASYNC",
    "C4",  # comprehensions
    "B",   # bugbear
    "DTZ", # datetime
    "E",   # style errors
    "F",   # flake8
    "I",   # import sorting
    "LOG", # logging calls
    "N",   # naming
    "PT",  # pytest
    "S",   # bandit security
    "UP",  # upgrade
    "YTT", # sys.version misuses
    "W",   # style warnings
]

# Too long lines are format territory
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = [
    # Test files can use `assert` all they want
    "S101",
    # Tests can also hardcode passwords
    "S105",
    "S106",
]

"scripts/**.py" = [
    # Scripts can subprocess, yes-sir
    "S603",
    "S607",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
