[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miggo-mcp"
version = "0.5.3"
description = "MCP server for Miggo's public API"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.19.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.3",
    "pydantic-settings>=2.11.0",
]

[project.scripts]
miggo-mcp = "miggo_mcp.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/miggo_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-httpx>=0.23.0",
    "pre-commit>=4.3.0,<5.0",
    "ruff==0.14.2.0",
    "click>=8.3.0",
]

[tool.pytest.ini_options]
markers = [
    "integration: end-to-end test that requires MIGGO_PUBLIC_TOKEN and `uv` on PATH",
]

[tool.ruff.lint]
select = [
    "A",   # builtins shadowing
    "ASYNC",
    "C4",  # comprehensions
    "B",   # bugbear
    "DTZ", # datetime
    "E",   # style errors
    "F",   # flake8
    "I",   # import sorting
    "LOG", # logging calls
    "N",   # naming
    "PT",  # pytest
    "S",   # bandit security
    "UP",  # upgrade
    "YTT", # sys.version misuses
    "W",   # style warnings
]

# Too long lines are format territory
ignore = [
    "E501",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**.py" = [
    # Test files can use `assert` all they want
    "S101",
    # Tests can also hardcode passwords
    "S105",
    "S106",
]

"scripts/**.py" = [
    # Scripts can subprocess, yes-sir
    "S603",
    "S607",
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
